--- a/package.json
+++ b/package.json
@@ -9,5 +9,6 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "turbo": "^1.10.12"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
