--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@astroeditor/astroeditor": "0.0.0",
+    "@iconify/react": "^4.1.1",
     "@types/node": "20.4.5",
-    "@types/react": "18.2.16",
+    "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
-    "eslint": "8.45.0",
+    "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "postcss": "8.4.27",
