--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,18 +11,20 @@
   "dependencies": {
     "@astroeditor/astroeditor": "0.0.0",
     "@iconify/react": "^4.1.1",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@types/node": "20.6.3",
+    "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.2",
+    "nanoid": "^5.0.1",
+    "next": "13.5.2",
+    "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   }
 }
