--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "deps": "ncu -ws"
+    "deps": "ncu --workspaces --root"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "npm-check-updates": "^16.14.12",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "turbo": "^1.11.3"
+    "npm-check-updates": "^16.14.16",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "turbo": "^1.12.5"
   },
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@4.1.1+sha256.f3cc0eda8e5560e529c7147565b30faa43b4e472d90e8634d7134a37c7f59781"
 }
