--- a/packages/astroeditor/package.json
+++ b/packages/astroeditor/package.json
@@ -1,24 +1,14 @@
 {
   "name": "@astroeditor/astroeditor",
   "version": "0.0.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/astroeditor.js",
+  "types": "dist/astroeditor.d.ts",
   "scripts": {
-    "build": "tsup --minify",
-    "dev": "tsup --watch"
+    "build:base": "wasm-pack build --no-pack -t web --out-dir dist",
+    "build": "yarn build:base --release",
+    "dev": "yarn build:base --dev"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.102",
-    "@types/bytebuffer": "^5.0.48",
-    "@types/node": "^20.10.8",
-    "@types/pako": "^2.0.3",
-    "@types/uuid": "^9.0.7",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "bytebuffer": "^5.0.1",
-    "pako": "^2.1.0",
-    "uuid": "^9.0.1"
+    "wasm-pack": "^0.12.1"
   }
 }
