--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,19 +12,20 @@
     "@astroeditor/astroeditor": "0.0.0",
     "@iconify/react": "^4.1.1",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@types/node": "20.11.27",
-    "@types/react": "18.2.66",
-    "@types/react-dom": "18.2.22",
-    "autoprefixer": "10.4.18",
-    "clsx": "^2.1.0",
+    "@types/node": "20.12.7",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "autoprefixer": "10.4.19",
+    "clsx": "^2.1.1",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.3",
-    "nanoid": "^5.0.6",
-    "next": "14.1.3",
-    "postcss": "8.4.35",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.4.2"
+    "eslint-config-next": "14.2.3",
+    "nanoid": "^5.0.7",
+    "next": "14.2.3",
+    "postcss": "8.4.38",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5",
+    "zustand": "^4.5.2"
   }
 }
