--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,23 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@astroeditor/astroeditor": "0.0.0",
+    "@astroeditor/astroeditor": "workspace:*",
     "@iconify/react": "^5.0.1",
+    "@radix-ui/react-accessible-icon": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@types/node": "20.14.0",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.19",
+    "@react-spring/web": "^9.7.3",
+    "@tanstack/react-query": "5.40.1",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
-    "eslint": "9.4.0",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^9.4.0",
+    "eslint-config-next": "^14.2.3",
     "nanoid": "^5.0.7",
-    "next": "14.2.3",
-    "postcss": "8.4.38",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tailwindcss": "3.4.3",
-    "typescript": "5.4.5",
+    "next": "^14.2.3",
+    "postcss": "^8.4.38",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
     "zustand": "^4.5.2"
   }
 }
